# engcomp-cg

./: .gitignore  README.md  exemplo.cpp
freeCodeCamp/1_window/: CMakeLists.txt
freeCodeCamp/1_window/src/: main.cpp
projeto2D/: .gitignore  CMakeLists.txt  README.md
projeto2D/res/shaders/: basic.shader
projeto2D/src/: Application.cpp  Shader.cpp  Shader.h
sandbox/breakout/: CMakeLists.txt
sandbox/breakout/src/: game.cpp  game.h  main.cpp  resource_manager.cpp  resource_manager.h  shader.h  texture.h
sandbox/transformations/: CMakeLists.txt  README.md
sandbox/transformations/src/: Application.cpp  VertexArray.h
theCherno/01_window/: CMakeLists.txt
theCherno/01_window/src/: main.cpp
theCherno/02_modernOpenGL/src/: main.cpp
theCherno/06_writingShaders/: CMakeLists.txt
theCherno/07_proShaders/: CMakeLists.txt  README.md
theCherno/07_proShaders/res/shaders/: basic.shader
theCherno/08_indexBuffers/: README.md
theCherno/08_indexBuffers/src/: glad.h  main.cpp
theCherno/09_dealingWithErrors/: CMakeLists.txt  README.md
theCherno/09_dealingWithErrors/src/: main.cpp
theCherno/10_uniforms/: CMakeLists.txt  README.md
theCherno/10_uniforms/src/: main.cpp
theCherno/11_vertexArrays/: CMakeLists.txt  README.md
theCherno/11_vertexArrays/src/: main.cpp
theCherno/12_classesPart1/: CMakeLists.txt  README.md
theCherno/12_classesPart1/res/shaders/: basic.shader
theCherno/12_classesPart1/src/: Main.cpp  Renderer.h  main.cpp
theCherno/13_classesPart2/: CMakeLists.txt  README.md
theCherno/13_classesPart2/src/: Main.cpp  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h
theCherno/14_classesPart3/: CMakeLists.txt  README.md
theCherno/14_classesPart3/src/: IndexBuffer.cpp  Main.cpp
theCherno/15_renderer/: CMakeLists.txt  README.md
theCherno/15_renderer/src/: Main.cpp  Renderer.h  Shader.cpp  Shader.h  VertexBufferLayout.h
theCherno/16_rendererAndTextures/: CMakeLists.txt  README.md
theCherno/16_rendererAndTextures/src/: Main.cpp  Shader.h  Texture.cpp
theCherno/16_textures/: CMakeLists.txt
theCherno/16_textures/res/shaders/: basic.shader
theCherno/16_textures/src/: Application.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h
theCherno/17_blending/: CMakeLists.txt  README.md
theCherno/18_maths/: CMakeLists.txt  README.md
theCherno/18_maths/src/: Application.cpp  Texture.h  VertexArray.cpp
theCherno/19_projectionMatrices/: CMakeLists.txt  README.md
theCherno/19_projectionMatrices/res/shaders/: basic.shader
theCherno/19_projectionMatrices/src/: Application.cpp
theCherno/20_modelViewProjection/: CMakeLists.txt  README.md
theCherno/20_modelViewProjection/src/: Application.cpp
theCherno/21_imGui/: CMakeLists.txt  README.md
theCherno/21_imGui/src/: Application.cpp
theCherno/22_multipleObjects/: CMakeLists.txt  README.md
theCherno/22_multipleObjects/src/: Application.cpp
theCherno/2_modernOpenGL/: CMakeLists.txt
theCherno/2_modernOpenGL/src/: main.cpp
theCherno/3_vertexBuffers/: CMakeLists.txt
theCherno/3_vertexBuffers/src/: main.cpp
theCherno/4_vertexAttributes/: CMakeLists.txt
theCherno/4_vertexAttributes/src/: main.cpp
theCherno/5_aboutShaders/: README.md
theCherno/6_writingShaders/: README.md
theCherno/6_writingShaders/src/: main.cpp
theCherno/7_proShaders/src/: glad.c  main.cpp
theCherno/8_indexBuffers/: CMakeLists.txt
